// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RHSM Constants should have specific RHSM properties: all exported rhsm constants 1`] = `
Object {
  "RHSM_API_PATH_METRIC_TYPES": Object {
    "CORES": "Cores",
    "CORE_SECONDS": "Core-seconds",
    "INSTANCE_HOURS": "Instance-hours",
    "SOCKETS": "Sockets",
    "STORAGE_GIBIBYTES": "Storage-gibibytes",
    "TRANSFER_GIBIBYTES": "Transfer-gibibytes",
  },
  "RHSM_API_PATH_PRODUCT_TYPES": Object {
    "OPENSHIFT": "OpenShift Container Platform",
    "OPENSHIFT_DEDICATED_METRICS": "OpenShift-dedicated-metrics",
    "OPENSHIFT_METRICS": "OpenShift-metrics",
    "RHEL": "RHEL",
    "RHEL_ARM": "RHEL for ARM",
    "RHEL_COMPUTE_NODE": "RHEL Compute Node",
    "RHEL_DESKTOP": "RHEL Desktop",
    "RHEL_IBM_POWER": "RHEL for IBM Power",
    "RHEL_IBM_Z": "RHEL for IBM z",
    "RHEL_SERVER": "RHEL Server",
    "RHEL_WORKSTATION": "RHEL Workstation",
    "RHEL_X86": "RHEL for x86",
    "RHOSAK": "rhosak",
    "SATELLITE": "Satellite",
    "SATELLITE_CAPSULE": "Satellite Capsule",
    "SATELLITE_SERVER": "Satellite Server",
  },
  "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
    "DAILY": "Daily",
    "MONTHLY": "Monthly",
    "QUARTERLY": "Quarterly",
    "WEEKLY": "Weekly",
  },
  "RHSM_API_QUERY_SET_TALLY_CAPACITY_TYPES": Object {
    "END_DATE": "ending",
    "GRANULARITY": "granularity",
    "SLA": "sla",
    "START_DATE": "beginning",
    "USAGE": "usage",
  },
  "RHSM_API_QUERY_SET_TYPES": Object {
    "END_DATE": "ending",
    "GRANULARITY": "granularity",
    "SLA": "sla",
    "START_DATE": "beginning",
    "USAGE": "usage",
  },
  "RHSM_API_QUERY_SLA_TYPES": Object {
    "NONE": "",
    "PREMIUM": "Premium",
    "SELF": "Self-Support",
    "STANDARD": "Standard",
  },
  "RHSM_API_QUERY_UOM_TYPES": Object {
    "CORES": "cores",
    "SOCKETS": "sockets",
  },
  "RHSM_API_QUERY_USAGE_TYPES": Object {
    "DEVELOPMENT": "Development/Test",
    "DISASTER": "Disaster Recovery",
    "PRODUCTION": "Production",
    "UNSPECIFIED": "",
  },
  "RHSM_API_RESPONSE_DATA": "data",
  "RHSM_API_RESPONSE_ERROR_CODE_TYPES": Object {
    "GENERIC": "SUBSCRIPTIONS1003",
    "OPTIN": "SUBSCRIPTIONS1004",
  },
  "RHSM_API_RESPONSE_GRANULARITY_TYPES": Object {
    "DAILY": "Daily",
    "MONTHLY": "Monthly",
    "QUARTERLY": "Quarterly",
    "WEEKLY": "Weekly",
  },
  "RHSM_API_RESPONSE_META": "meta",
  "RHSM_API_RESPONSE_SLA_TYPES": Object {
    "NONE": "",
    "PREMIUM": "Premium",
    "SELF": "Self-Support",
    "STANDARD": "Standard",
  },
  "RHSM_API_RESPONSE_TALLY_DATA_TYPES": Object {
    "DATE": "date",
    "HAS_DATA": "has_data",
    "VALUE": "value",
  },
  "RHSM_API_RESPONSE_TALLY_META_TYPES": Object {
    "COUNT": "count",
    "DATE": "date",
    "HAS_CLOUDIGRADE_DATA": "has_cloudigrade_data",
    "HAS_CLOUDIGRADE_MISMATCH": "has_cloudigrade_mismatch",
    "HAS_DATA": "has_data",
    "METRIC_ID": "metric_id",
    "PRODUCT": "product",
    "TOTAL_MONTHLY": "total_monthly",
    "VALUE": "value",
  },
  "RHSM_API_RESPONSE_UOM_TYPES": Object {
    "CORES": "cores",
    "SOCKETS": "sockets",
  },
  "RHSM_API_RESPONSE_USAGE_TYPES": Object {
    "DEVELOPMENT": "Development/Test",
    "DISASTER": "Disaster Recovery",
    "PRODUCTION": "Production",
    "UNSPECIFIED": "",
  },
  "default": Object {
    "RHSM_API_PATH_METRIC_TYPES": Object {
      "CORES": "Cores",
      "CORE_SECONDS": "Core-seconds",
      "INSTANCE_HOURS": "Instance-hours",
      "SOCKETS": "Sockets",
      "STORAGE_GIBIBYTES": "Storage-gibibytes",
      "TRANSFER_GIBIBYTES": "Transfer-gibibytes",
    },
    "RHSM_API_PATH_PRODUCT_TYPES": Object {
      "OPENSHIFT": "OpenShift Container Platform",
      "OPENSHIFT_DEDICATED_METRICS": "OpenShift-dedicated-metrics",
      "OPENSHIFT_METRICS": "OpenShift-metrics",
      "RHEL": "RHEL",
      "RHEL_ARM": "RHEL for ARM",
      "RHEL_COMPUTE_NODE": "RHEL Compute Node",
      "RHEL_DESKTOP": "RHEL Desktop",
      "RHEL_IBM_POWER": "RHEL for IBM Power",
      "RHEL_IBM_Z": "RHEL for IBM z",
      "RHEL_SERVER": "RHEL Server",
      "RHEL_WORKSTATION": "RHEL Workstation",
      "RHEL_X86": "RHEL for x86",
      "RHOSAK": "rhosak",
      "SATELLITE": "Satellite",
      "SATELLITE_CAPSULE": "Satellite Capsule",
      "SATELLITE_SERVER": "Satellite Server",
    },
    "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
      "DAILY": "Daily",
      "MONTHLY": "Monthly",
      "QUARTERLY": "Quarterly",
      "WEEKLY": "Weekly",
    },
    "RHSM_API_QUERY_SET_TALLY_CAPACITY_TYPES": Object {
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "SLA": "sla",
      "START_DATE": "beginning",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SET_TYPES": Object {
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "SLA": "sla",
      "START_DATE": "beginning",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SLA_TYPES": Object {
      "NONE": "",
      "PREMIUM": "Premium",
      "SELF": "Self-Support",
      "STANDARD": "Standard",
    },
    "RHSM_API_QUERY_UOM_TYPES": Object {
      "CORES": "cores",
      "SOCKETS": "sockets",
    },
    "RHSM_API_QUERY_USAGE_TYPES": Object {
      "DEVELOPMENT": "Development/Test",
      "DISASTER": "Disaster Recovery",
      "PRODUCTION": "Production",
      "UNSPECIFIED": "",
    },
    "RHSM_API_RESPONSE_DATA": "data",
    "RHSM_API_RESPONSE_ERROR_CODE_TYPES": Object {
      "GENERIC": "SUBSCRIPTIONS1003",
      "OPTIN": "SUBSCRIPTIONS1004",
    },
    "RHSM_API_RESPONSE_GRANULARITY_TYPES": Object {
      "DAILY": "Daily",
      "MONTHLY": "Monthly",
      "QUARTERLY": "Quarterly",
      "WEEKLY": "Weekly",
    },
    "RHSM_API_RESPONSE_META": "meta",
    "RHSM_API_RESPONSE_SLA_TYPES": Object {
      "NONE": "",
      "PREMIUM": "Premium",
      "SELF": "Self-Support",
      "STANDARD": "Standard",
    },
    "RHSM_API_RESPONSE_TALLY_DATA_TYPES": Object {
      "DATE": "date",
      "HAS_DATA": "has_data",
      "VALUE": "value",
    },
    "RHSM_API_RESPONSE_TALLY_META_TYPES": Object {
      "COUNT": "count",
      "DATE": "date",
      "HAS_CLOUDIGRADE_DATA": "has_cloudigrade_data",
      "HAS_CLOUDIGRADE_MISMATCH": "has_cloudigrade_mismatch",
      "HAS_DATA": "has_data",
      "METRIC_ID": "metric_id",
      "PRODUCT": "product",
      "TOTAL_MONTHLY": "total_monthly",
      "VALUE": "value",
    },
    "RHSM_API_RESPONSE_UOM_TYPES": Object {
      "CORES": "cores",
      "SOCKETS": "sockets",
    },
    "RHSM_API_RESPONSE_USAGE_TYPES": Object {
      "DEVELOPMENT": "Development/Test",
      "DISASTER": "Disaster Recovery",
      "PRODUCTION": "Production",
      "UNSPECIFIED": "",
    },
  },
  "rhsmConstants": Object {
    "RHSM_API_PATH_METRIC_TYPES": Object {
      "CORES": "Cores",
      "CORE_SECONDS": "Core-seconds",
      "INSTANCE_HOURS": "Instance-hours",
      "SOCKETS": "Sockets",
      "STORAGE_GIBIBYTES": "Storage-gibibytes",
      "TRANSFER_GIBIBYTES": "Transfer-gibibytes",
    },
    "RHSM_API_PATH_PRODUCT_TYPES": Object {
      "OPENSHIFT": "OpenShift Container Platform",
      "OPENSHIFT_DEDICATED_METRICS": "OpenShift-dedicated-metrics",
      "OPENSHIFT_METRICS": "OpenShift-metrics",
      "RHEL": "RHEL",
      "RHEL_ARM": "RHEL for ARM",
      "RHEL_COMPUTE_NODE": "RHEL Compute Node",
      "RHEL_DESKTOP": "RHEL Desktop",
      "RHEL_IBM_POWER": "RHEL for IBM Power",
      "RHEL_IBM_Z": "RHEL for IBM z",
      "RHEL_SERVER": "RHEL Server",
      "RHEL_WORKSTATION": "RHEL Workstation",
      "RHEL_X86": "RHEL for x86",
      "RHOSAK": "rhosak",
      "SATELLITE": "Satellite",
      "SATELLITE_CAPSULE": "Satellite Capsule",
      "SATELLITE_SERVER": "Satellite Server",
    },
    "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
      "DAILY": "Daily",
      "MONTHLY": "Monthly",
      "QUARTERLY": "Quarterly",
      "WEEKLY": "Weekly",
    },
    "RHSM_API_QUERY_SET_TALLY_CAPACITY_TYPES": Object {
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "SLA": "sla",
      "START_DATE": "beginning",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SET_TYPES": Object {
      "END_DATE": "ending",
      "GRANULARITY": "granularity",
      "SLA": "sla",
      "START_DATE": "beginning",
      "USAGE": "usage",
    },
    "RHSM_API_QUERY_SLA_TYPES": Object {
      "NONE": "",
      "PREMIUM": "Premium",
      "SELF": "Self-Support",
      "STANDARD": "Standard",
    },
    "RHSM_API_QUERY_UOM_TYPES": Object {
      "CORES": "cores",
      "SOCKETS": "sockets",
    },
    "RHSM_API_QUERY_USAGE_TYPES": Object {
      "DEVELOPMENT": "Development/Test",
      "DISASTER": "Disaster Recovery",
      "PRODUCTION": "Production",
      "UNSPECIFIED": "",
    },
    "RHSM_API_RESPONSE_DATA": "data",
    "RHSM_API_RESPONSE_ERROR_CODE_TYPES": Object {
      "GENERIC": "SUBSCRIPTIONS1003",
      "OPTIN": "SUBSCRIPTIONS1004",
    },
    "RHSM_API_RESPONSE_GRANULARITY_TYPES": Object {
      "DAILY": "Daily",
      "MONTHLY": "Monthly",
      "QUARTERLY": "Quarterly",
      "WEEKLY": "Weekly",
    },
    "RHSM_API_RESPONSE_META": "meta",
    "RHSM_API_RESPONSE_SLA_TYPES": Object {
      "NONE": "",
      "PREMIUM": "Premium",
      "SELF": "Self-Support",
      "STANDARD": "Standard",
    },
    "RHSM_API_RESPONSE_TALLY_DATA_TYPES": Object {
      "DATE": "date",
      "HAS_DATA": "has_data",
      "VALUE": "value",
    },
    "RHSM_API_RESPONSE_TALLY_META_TYPES": Object {
      "COUNT": "count",
      "DATE": "date",
      "HAS_CLOUDIGRADE_DATA": "has_cloudigrade_data",
      "HAS_CLOUDIGRADE_MISMATCH": "has_cloudigrade_mismatch",
      "HAS_DATA": "has_data",
      "METRIC_ID": "metric_id",
      "PRODUCT": "product",
      "TOTAL_MONTHLY": "total_monthly",
      "VALUE": "value",
    },
    "RHSM_API_RESPONSE_UOM_TYPES": Object {
      "CORES": "cores",
      "SOCKETS": "sockets",
    },
    "RHSM_API_RESPONSE_USAGE_TYPES": Object {
      "DEVELOPMENT": "Development/Test",
      "DISASTER": "Disaster Recovery",
      "PRODUCTION": "Production",
      "UNSPECIFIED": "",
    },
  },
}
`;

exports[`RHSM Constants should have specific RHSM properties: specific constants 1`] = `
Object {
  "RHSM_API_PATH_METRIC_TYPES": Object {
    "CORES": "Cores",
    "CORE_SECONDS": "Core-seconds",
    "INSTANCE_HOURS": "Instance-hours",
    "SOCKETS": "Sockets",
    "STORAGE_GIBIBYTES": "Storage-gibibytes",
    "TRANSFER_GIBIBYTES": "Transfer-gibibytes",
  },
  "RHSM_API_PATH_PRODUCT_TYPES": Object {
    "OPENSHIFT": "OpenShift Container Platform",
    "OPENSHIFT_DEDICATED_METRICS": "OpenShift-dedicated-metrics",
    "OPENSHIFT_METRICS": "OpenShift-metrics",
    "RHEL": "RHEL",
    "RHEL_ARM": "RHEL for ARM",
    "RHEL_COMPUTE_NODE": "RHEL Compute Node",
    "RHEL_DESKTOP": "RHEL Desktop",
    "RHEL_IBM_POWER": "RHEL for IBM Power",
    "RHEL_IBM_Z": "RHEL for IBM z",
    "RHEL_SERVER": "RHEL Server",
    "RHEL_WORKSTATION": "RHEL Workstation",
    "RHEL_X86": "RHEL for x86",
    "RHOSAK": "rhosak",
    "SATELLITE": "Satellite",
    "SATELLITE_CAPSULE": "Satellite Capsule",
    "SATELLITE_SERVER": "Satellite Server",
  },
  "RHSM_API_QUERY_GRANULARITY_TYPES": Object {
    "DAILY": "Daily",
    "MONTHLY": "Monthly",
    "QUARTERLY": "Quarterly",
    "WEEKLY": "Weekly",
  },
  "RHSM_API_QUERY_SET_TALLY_CAPACITY_TYPES": Object {
    "END_DATE": "ending",
    "GRANULARITY": "granularity",
    "SLA": "sla",
    "START_DATE": "beginning",
    "USAGE": "usage",
  },
  "RHSM_API_QUERY_SET_TYPES": Object {
    "END_DATE": "ending",
    "GRANULARITY": "granularity",
    "SLA": "sla",
    "START_DATE": "beginning",
    "USAGE": "usage",
  },
  "RHSM_API_QUERY_SLA_TYPES": Object {
    "NONE": "",
    "PREMIUM": "Premium",
    "SELF": "Self-Support",
    "STANDARD": "Standard",
  },
  "RHSM_API_QUERY_UOM_TYPES": Object {
    "CORES": "cores",
    "SOCKETS": "sockets",
  },
  "RHSM_API_QUERY_USAGE_TYPES": Object {
    "DEVELOPMENT": "Development/Test",
    "DISASTER": "Disaster Recovery",
    "PRODUCTION": "Production",
    "UNSPECIFIED": "",
  },
  "RHSM_API_RESPONSE_DATA": "data",
  "RHSM_API_RESPONSE_ERROR_CODE_TYPES": Object {
    "GENERIC": "SUBSCRIPTIONS1003",
    "OPTIN": "SUBSCRIPTIONS1004",
  },
  "RHSM_API_RESPONSE_GRANULARITY_TYPES": Object {
    "DAILY": "Daily",
    "MONTHLY": "Monthly",
    "QUARTERLY": "Quarterly",
    "WEEKLY": "Weekly",
  },
  "RHSM_API_RESPONSE_META": "meta",
  "RHSM_API_RESPONSE_SLA_TYPES": Object {
    "NONE": "",
    "PREMIUM": "Premium",
    "SELF": "Self-Support",
    "STANDARD": "Standard",
  },
  "RHSM_API_RESPONSE_TALLY_DATA_TYPES": Object {
    "DATE": "date",
    "HAS_DATA": "has_data",
    "VALUE": "value",
  },
  "RHSM_API_RESPONSE_TALLY_META_TYPES": Object {
    "COUNT": "count",
    "DATE": "date",
    "HAS_CLOUDIGRADE_DATA": "has_cloudigrade_data",
    "HAS_CLOUDIGRADE_MISMATCH": "has_cloudigrade_mismatch",
    "HAS_DATA": "has_data",
    "METRIC_ID": "metric_id",
    "PRODUCT": "product",
    "TOTAL_MONTHLY": "total_monthly",
    "VALUE": "value",
  },
  "RHSM_API_RESPONSE_UOM_TYPES": Object {
    "CORES": "cores",
    "SOCKETS": "sockets",
  },
  "RHSM_API_RESPONSE_USAGE_TYPES": Object {
    "DEVELOPMENT": "Development/Test",
    "DISASTER": "Disaster Recovery",
    "PRODUCTION": "Production",
    "UNSPECIFIED": "",
  },
}
`;
